@@ -13,7 +13,7 @@
 	/**
 	 * @ingroup Flow
 	**/
-	class SimplePhpView implements View, Stringable
+	class SimplePhpView extends EmptyView
 	{
 		protected $templatePath		= null;
 		protected $partViewResolver	= null;
@@ -24,7 +24,7 @@
 			$this->partViewResolver = $partViewResolver;
 		}
 		
-		public function render($model = null)
+		public function render(/* Model */ $model = null)
 		{
 			Assert::isTrue($model === null || $model instanceof Model);
 			
@@ -38,6 +38,8 @@
 			include $this->templatePath;
 			
 			$this->postRender();
+			
+			return $this;
 		}
 		
 		public function toString($model = null)
